feat: Add styling for exchange rates section in main.css

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             <div id="news"></div>
         </section>
 
-        <section id="exchange-rates">
+        <section id="exchange-rates" class="exchange-rates">
             <h2>Currency Exchange Rates</h2>
             <select id="currency-select"></select>
             <div id="rates"></div>
