feat: Refactor budget and expenses management with new storage utilities; enhance budget summary display

--- a/src/expenses.html
+++ b/src/expenses.html
@@ -68,7 +68,18 @@
                     <tbody id="expenses-list"></tbody>
                 </table>
             </div>
-            <div id="budget-balance">Remaining Budget: <span id="balance-amount">$0.00</span></div>
+        </section>
+        <section id="budget-summary">
+            <div class="budget-container">
+                <div class="budget-display">
+                    <h3>Total Budget</h3>
+                    <span id="full-budget-amount">$0.00</span>
+                </div>
+                <div id="budget-balance">
+                    <h3>Remaining Balance</h3>
+                    <span id="balance-amount">$0.00</span>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
