--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
         <h1>FinTrack</h1>
         <nav>
           <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="expenses.html">Expenses</a></li>
-            <li><a href="budget.html">Budget</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/expenses.html">Expenses</a></li>
+            <li><a href="/budget.html">Budget</a></li>
           </ul>
         </nav>
     </header>
@@ -36,7 +36,6 @@
             <h2>Website Features</h2>
             <ul>
                 <li>Log and categorize your expenses</li>
-                <li>Visualize spending with charts</li>
                 <li>Set and monitor budgets</li>
                 <li>Get real-time currency exchange rates</li>
                 <li>Read the latest financial market news</li>
