--- a/src/news.html
+++ b/src/news.html
@@ -13,9 +13,9 @@
     <h1>FinTrack</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="expenses.html">Expenses</a></li>
-        <li><a href="budget.html">Budget</a></li>
+         <li><a href="/index.html">Home</a></li>
+            <li><a href="/expenses.html">Expenses</a></li>
+            <li><a href="/budget.html">Budget</a></li>
       </ul>
     </nav>
   </header>
