--- a/src/news.html
+++ b/src/news.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="./styles/main.css">
   <link href="https://fonts.googleapis.com/css?family=Poppins:700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <header>
-    <h1>FinTrack</h1>
+    <a href="/"><img src="/images/logo.png" alt="logo" class="logo"></a>
     <nav>
       <ul>
          <li><a href="/index.html">Home</a></li>
