--- a/src/budget.html
+++ b/src/budget.html
@@ -21,6 +21,7 @@
         </nav>
     </header>
     <main>
+        <button type="button" id="load-example-btn" class="cta-btn" style="margin-left:1rem;">Load Example Budget</button>
         <section id="budget-form-section">
             <h2>Add Budget Item</h2>
             <form id="budget-form">
@@ -32,6 +33,7 @@
                 <input type="number" id="amount" placeholder="Amount" required min="0.01" step="0.01">
                 <input type="text" id="description" placeholder="Description">
                 <button type="submit" class="cta-btn">Add</button>
+                
             </form>
         </section>
         <section id="budget-list-section">
