--- a/src/expenses.html
+++ b/src/expenses.html
@@ -22,8 +22,10 @@
         </nav>
     </header>
     <main>
-        <button id="showChartBtn" class="cta-btn">Show Expenses Chart</button>
-<button id="loadExampleExpensesBtn" class="cta-btn" style="margin-left:1rem;">Load Example Expenses</button>
+      <div class="expenses-action-buttons">
+    <button id="showChartBtn" class="cta-btn">Show Expenses Chart</button>
+    <button id="loadExampleExpensesBtn" class="cta-btn">Load Example Expenses</button>
+  </div>
 
 <div id="expensesChartModal" class="modal" style="display:none;">
   <div class="modal-content">
@@ -94,7 +96,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 FinTrack. All rights reserved.</p>
+        <p>&copy; 2025 FinTrack. All rights reserved.</p>
     </footer>
     
     <script type="module" src="scripts/expenses.js"></script>
